{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 4,
  "lineage": "5e8647ec-ed5e-697d-9aff-98a55b67cf46",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0381a3781b9fa5af4",
            "arn": "arn:aws:ec2:us-east-2:615299736927:elastic-ip/eipalloc-0381a3781b9fa5af4",
            "domain": "vpc",
            "id": "eipalloc-0381a3781b9fa5af4",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-133-216-152.us-east-2.compute.amazonaws.com",
            "public_ip": "3.133.216.152",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "lesson-5-vpc-nat-eip"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:615299736927:internet-gateway/igw-05297269cea6d35e9",
            "id": "igw-05297269cea6d35e9",
            "owner_id": "615299736927",
            "tags": {
              "Name": "lesson-5-vpc-igw"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-igw"
            },
            "vpc_id": "vpc-012efb07bd51906e7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0381a3781b9fa5af4",
            "connectivity_type": "public",
            "id": "nat-0e5bff5c782856401",
            "subnet_id": "subnet-00c9ff1d48394ac90",
            "tags": {
              "Name": "lesson-5-vpc-nat-gw"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-nat-gw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05297269cea6d35e9",
            "id": "r-rtb-0cf0e483deaf697831080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cf0e483deaf69783",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:615299736927:route-table/rtb-02ce39911f82b0276",
            "id": "rtb-02ce39911f82b0276",
            "owner_id": "615299736927",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "lesson-5-vpc-private-rt"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-012efb07bd51906e7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:615299736927:route-table/rtb-0cf0e483deaf69783",
            "id": "rtb-0cf0e483deaf69783",
            "owner_id": "615299736927",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "lesson-5-vpc-public-rt"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-012efb07bd51906e7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07e15775089e742c0",
            "route_table_id": "rtb-02ce39911f82b0276",
            "subnet_id": "subnet-0f4484ce1c92e590d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ad41b4a79c0def9",
            "route_table_id": "rtb-02ce39911f82b0276",
            "subnet_id": "subnet-0c66034adee6b49fe"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dddf9588cb8fa9a9",
            "route_table_id": "rtb-02ce39911f82b0276",
            "subnet_id": "subnet-0c2ac190fd4e87b8c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd0bc4528bd05d7e",
            "route_table_id": "rtb-0cf0e483deaf69783",
            "subnet_id": "subnet-00c9ff1d48394ac90"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d661cc847ccb1825",
            "route_table_id": "rtb-0cf0e483deaf69783",
            "subnet_id": "subnet-0ddc6861d2d186027"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a545c61603fe15ca",
            "route_table_id": "rtb-0cf0e483deaf69783",
            "subnet_id": "subnet-0fd2189415a57a977"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:615299736927:subnet/subnet-0f4484ce1c92e590d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4484ce1c92e590d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "615299736927",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lesson-5-vpc-private-subnet-1"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-private-subnet-1"
            },
            "vpc_id": "vpc-012efb07bd51906e7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:615299736927:subnet/subnet-0c66034adee6b49fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c66034adee6b49fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "615299736927",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lesson-5-vpc-private-subnet-2"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-private-subnet-2"
            },
            "vpc_id": "vpc-012efb07bd51906e7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:615299736927:subnet/subnet-0c2ac190fd4e87b8c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c2ac190fd4e87b8c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "615299736927",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lesson-5-vpc-private-subnet-3"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-private-subnet-3"
            },
            "vpc_id": "vpc-012efb07bd51906e7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:615299736927:subnet/subnet-00c9ff1d48394ac90",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c9ff1d48394ac90",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "615299736927",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lesson-5-vpc-public-subnet-1"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-public-subnet-1"
            },
            "vpc_id": "vpc-012efb07bd51906e7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:615299736927:subnet/subnet-0ddc6861d2d186027",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ddc6861d2d186027",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "615299736927",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lesson-5-vpc-public-subnet-2"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-public-subnet-2"
            },
            "vpc_id": "vpc-012efb07bd51906e7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:615299736927:subnet/subnet-0fd2189415a57a977",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fd2189415a57a977",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "615299736927",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lesson-5-vpc-public-subnet-3"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-public-subnet-3"
            },
            "vpc_id": "vpc-012efb07bd51906e7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:615299736927:vpc/vpc-012efb07bd51906e7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c000ca0cfdbb22aa",
            "default_route_table_id": "rtb-05c7ef4fbdb148c22",
            "default_security_group_id": "sg-003179b952fe3db6a",
            "dhcp_options_id": "dopt-08c94d07d040019f1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-012efb07bd51906e7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05c7ef4fbdb148c22",
            "owner_id": "615299736927",
            "tags": {
              "Name": "lesson-5-vpc-vpc"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}